# sudoku

./: .gitignore  CMakeLists.txt  README.md  main.c
lib/: helpers.h  input_manager.h  simple_terminal_drawer.h  sudoku.h  sudoku_analyzer.h  terminal_view.h
src/: helpers.c  input_manager.c  simple_terminal_drawer.c  sudoku.c  sudoku_analyzer.c  terminal_view.c
